backends/foundation_macros/tests/trybuild/fail/wasm_entrypoint_missing_desc.rs
use foundation_macros::wasm_entrypoint;

#[wasm_entrypoint(name = "incomplete")]
pub fn missing_desc() {}

fn main() {}
