backends/foundation_macros/tests/trybuild/fail/wasm_entrypoint_missing_desc.stderr
error: missing required attribute `desc`
 --> tests/trybuild/fail/wasm_entrypoint_missing_desc.rs:3:1
  |
3 | #[wasm_entrypoint(name = "incomplete")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `wasm_entrypoint` (in Nightly builds, run with -Z macro-backtrace for more info)
